--- a/app/templates/components/rental-tile.hbs
+++ b/app/templates/components/rental-tile.hbs
@@ -1,9 +1,13 @@
 {{yield}}
 
-<li>{{rental.owner}}'s {{rental.type}} in {{rental.city}}</li>
-{{#if isImageShowing}}
-<p><img src = {{rental.image}} alt={{rental.type}} {{action 'imageHide'}}></p>
-{{else}}
-<button {{action 'imageShow'}}>Show Image</button>
-{{/if}}
+<li>{{#link-to 'rental' rental.id}}{{rental.owner}}'s {{rental.type}} in {{rental.city}} {{/link-to}}
+  {{#if isImageShowing}}
+    <p><img src={{rental.image}} alt={{rental.type}} {{action 'imageHide'}}></p>
+  {{else}}
+    <button {{action 'imageShow'}}>Image</button>
+  {{/if}}
+</li>
+
+{{update-rental rental=rental update="update"}}
+
 <button{{action 'delete' rental}}>Delete</button>
