--- a/app/templates/components/rental-tile.hbs
+++ b/app/templates/components/rental-tile.hbs
@@ -1,11 +1,8 @@
 {{yield}}
 <li>
-  {{#link-to 'rental' rental.id}}{{ rental.owner }}'s {{ rental.type }} in {{ rental.city }} - {{ rental.bedrooms }} bedrooms{{/link-to}}
-{{!--The value of isImageShowing comes from the component's JavaScript file (rental-tile.js). Since the image will be hidden at first, we will set the property to false:--}}
+  {{#link-to 'rental' rental.id}}{{ rental.owner }}'s {{ rental.type }} in {{ rental.city.name }} - {{ rental.bedrooms }} bedrooms{{/link-to}}
   {{#if isImageShowing }}
     <p><img src="{{rental.image}}" alt="{{rental.type}}" {{action 'imageHide'}}></p>
-{{!--Moving "action 'imageHide'" allows to hide on click of p element
-    <button action 'imageHide'>Hide Image</button>--}}
   {{else}}
     <button {{action 'imageShow'}}>Show Image</button>
   {{/if}}
