--- a/app/templates/components/new-rental.hbs
+++ b/app/templates/components/new-rental.hbs
@@ -14,11 +14,6 @@
       </div>
 
       <div class="form-group">
-        <label for="city">City</label>
-        {{input value=city id="city"}}
-      </div>
-
-      <div class="form-group">
         <label for="bedrooms">Number of Bedrooms</label>
         {{input value=bedrooms id="bedrooms"}}
       </div>
@@ -28,7 +23,7 @@
         {{input value=image id="image"}}
       </div>
 
-    <button {{action 'save1'}}>Save</button>
+    <button {{action 'saveRental'}}>Save</button>
   </form>
 </div>
 {{else}}
