--- a/app/templates/components/rental-detail.hbs
+++ b/app/templates/components/rental-detail.hbs
@@ -1,1 +1,4 @@
-{{yield}}
+Located in {{rental.city.name}}, this {{rental.bedrooms}} bedroom {{rental.type}} is available by arrandment through {{rental.owner}}.
+<br>
+<hr>
+<p><img src={{rental.image}} alt={{rental.type}}></p>
