--- a/app/templates/rental.hbs
+++ b/app/templates/rental.hbs
@@ -3,4 +3,4 @@
 {{rental-detail rental=model}}
 
 {{update-rental rental=model update="update"}}
-<button {{action 'delete' rental}}> Delete </button>
+<button {{action 'delete' model}}> Delete </button>
