--- a/app/templates/city.hbs
+++ b/app/templates/city.hbs
@@ -3,7 +3,7 @@
 <h3>Rentals in {{model.name}}</h3>
 <ul>
     {{#each model.rentals as |rental|}}
-      <li>{{rental.owner}}</li>
+      <li>{{rental.owner}} {{rental-cost rental}}</li>
     {{/each}}
 </ul>
 {{new-rental saveRental="saveRental" city=model}}
