--- a/app/templates/components/new-rental.hbs
+++ b/app/templates/components/new-rental.hbs
@@ -23,6 +23,11 @@
         {{input value=image id="image"}}
       </div>
 
+      <div class="form-group">
+        <label for="cost">Cost per night</label>
+        {{input value=cost id="cost"}}
+      </div>
+
     <button {{action 'saveRental'}}>Save</button>
   </form>
 </div>
