--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,7 @@
   {{#each model.rentals as |rental|}}
   {{!--'rental' rightSide: component, 'rental' leftSide: model object
 To put it briefly, the rental on the left of the = refers to the variable name used within the component and the rental on the right refers to the model object we're assigning this variable to.--}}
-    {{rental-tile rental=rental destroyRental="destroyRental" update="update"}}
+    {{rental-tile rental=rental destroyRental="destroyRental" update="update"}}{{rental-cost rental}}
   {{/each}}
 </ul>
 <hr>
@@ -10,7 +10,7 @@ To put it briefly, the rental on the left of the = refers to the variable name u
 
 <ul>
   {{#each model.cities as |city|}}
-    {{city-tile city=city}}
+    <li>{{city-popularity city}} {{#link-to 'city' city.id}}{{city.name}}{{/link-to}}</li>
   {{/each}}
 </ul>
 
