add city functionality to super rentals project

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,4 +10,6 @@
 
 <footer>
   {{#link-to 'contact'}}Our representatives would love to help!{{/link-to}}
+  {{#link-to 'index'}}<h4>Home</h4>{{/link-to}}
+
 </footer>
