--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -14,9 +14,21 @@ We hope you find exactly what you're looking for in a place to stay.
 {{new-rental save2="save3"}}
 
 
-{{#each model.announcements as |announcement|}}
-<li>{{announcement.announcement}}</li>
+
+  <ul>
+    {{#each model.cities as |city|}}
+      <li> {{city-tile city=city destroyCity = "destroyCity"}}</li>
+    {{/each}}
+  </ul>
+
+  {{new-city saveCity="saveCity"}}
+
+  <hr />
+
+  {{#each model.announcements as |announcement|}}
+    <li>{{announcement.announcement}}</li>
   {{/each}}
+  <hr />
 
 <form>
   <div class="form-group">
