add advanced db functionality

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -9,7 +9,10 @@
 <hr>
 
 <footer>
-  {{#link-to 'contact'}}Our representatives would love to help!{{/link-to}}
   {{#link-to 'index'}}<h4>Home</h4>{{/link-to}}
+  {{#link-to 'about'}}About{{/link-to}}
+  {{#link-to 'announcement'}}Announcement{{/link-to}}
+  {{#link-to 'contact'}}Click here to contact us.{{/link-to}}
+
 
 </footer>
