--- a/app/templates/components/update-rental.hbs
+++ b/app/templates/components/update-rental.hbs
@@ -14,10 +14,10 @@
           {{input value=type id="type" placeholder=rental.type}}
         </div>
 
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label for="city">City</label>
           {{input value=city id="city" placeholder=rental.city}}
-        </div>
+        </div> -->
 
         <div class="form-group">
           <label for="bedrooms">Number of Bedrooms</label>
