--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,39 +1,38 @@
 {{outlet}}
 We hope you find exactly what you're looking for in a place to stay.
+<hr />
 
-{{#link-to 'about'}}About{{/link-to}}
-{{#link-to 'announcement'}}Announcement{{/link-to}}
-{{#link-to 'contact'}}Click here to contact us.{{/link-to}}
+
+<hr />
 
 <ul>
   {{#each model.rentals as |rental|}}
-    {{rental-tile rental=rental update = "update" destroyRental = "destroyRental"}}
+    {{rental-tile rental=rental update="update"}}
   {{/each}}
 </ul>
 
-{{new-rental save2="save3"}}
 
+<h2> Cities </h2>
 
 
   <ul>
     {{#each model.cities as |city|}}
-      <li> {{city-tile city=city destroyCity = "destroyCity"}}</li>
+    <li>{{#link-to 'city' city.id}}{{city.name}}{{/link-to}}</li>
     {{/each}}
   </ul>
 
   {{new-city saveCity="saveCity"}}
 
-  <hr />
-
+<!--
   {{#each model.announcements as |announcement|}}
     <li>{{announcement.announcement}}</li>
   {{/each}}
-  <hr />
+  <hr /> -->
 
-<form>
+<!-- <form>
   <div class="form-group">
     <label for="announcement">New announcement:</label>
     {{input value=announcement id="announcement"}}
   </div>
   <button {{action 'saveAnnouncement'}}>Save it!</button>
-</form>
+</form> -->
