--- a/app/templates/city.hbs
+++ b/app/templates/city.hbs
@@ -1,10 +1,1 @@
-<h1> Welcome to {{model.name}} </h1>
-
-<h3>Rentals in {{model.name}}</h3>
-<ul>
-    {{#each model.rentals as |rental|}}
-      <li>{{rental.owner}} {{rental-cost rental}}</li>
-    {{/each}}
-</ul>
-{{new-rental saveRental="saveRental" city=model}}
-<button {{action 'destroyCity' model}}>Delete</button>
+{{city-tile city=model}}
